<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

       <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_settings_weight"
                android:textSize="10pt">
            </TextView>
            <EditText
                android:id="@+id/WeightLb"
                android:layout_height="wrap_content"
                android:hint="@string/user_settings_weight_lb"
                android:textColor="#FF0000"
                android:inputType="numberSigned"
                android:layout_width="fill_parent">
            </EditText>
         </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_settings_height"
                android:textSize="10pt">
            </TextView>
            <EditText
                android:id="@+id/HeightFt"
                android:layout_height="wrap_content"
                android:hint="@string/user_settings_height_ft"
                android:textColor="#FFFFFF"
                android:inputType="numberSigned"
                android:layout_width="wrap_content">
            </EditText>
            <EditText
                android:id="@+id/HeightIn"
                android:layout_height="wrap_content"
                android:hint="@string/user_settings_height_in"
                android:textColor="#FFFFFF"
                android:inputType="numberSigned"
                android:layout_width="wrap_content">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_settings_age"
                android:textSize="10pt">
            </TextView>
            <EditText
                android:id="@+id/AgeYr"
                android:layout_height="wrap_content"
                android:hint="@string/user_settings_age_yr"
                android:textColor="#FFFFFF"
                android:inputType="numberSigned"
                android:layout_width="fill_parent">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_settings_gender"
                android:textSize="10pt">
            </TextView>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/GenderButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/GenderMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/user_settings_gender_male"
                    />
                <RadioButton android:id="@+id/GenderFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/user_settings_gender_female"
                    />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_settings_save"
            android:onClick="onSaveSettings"
            />

    </LinearLayout>
</ScrollView>